Updated css contact form and corrected wrong positioning

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Paprika&display=swap');
+
 html {
     color: #000;
 }
@@ -5,9 +7,37 @@ html {
 body {
     background-size: cover;
     margin-top: 164px;
-    font-family: 'lato';
+    font-family: 'Lato';
 }
 
+h2,
+h4,
+h5 {
+    font-family: 'Paprika';
+}
+
+hr {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 10px;
+    border-top: 5px solid #ffa368;
+}
+
+.btn-black {
+    background: black;
+    color: #ffa368;
+}
+
+.btn-black:hover,
+.btn-black:active,
+.btn-black:focus {
+    background: #222;
+    color: #86c4ff;
+}
+
+.text-black {
+    color: #000 !important;
+}
 
 /*  General colors */
 
@@ -35,7 +65,6 @@ body {
 .container-category {
     background-color: #ffa368;
 }
-
 
 .how-works {
     width: 100vw;
@@ -69,6 +98,7 @@ body {
     font-family: ;
 }
 
+/* I the one under the main navbar */
 hr.divider {
     margin: 0;
     height: 15px;
@@ -88,13 +118,6 @@ hr.divider {
     width: 1.5rem;
 }
 
-hr {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border: 10px;
-    border-top: 5px solid #ffa368;
-}
-
 .logo-font {
     text-transform: uppercase;
 }
@@ -102,33 +125,18 @@ hr {
 .main-logo-link {
     width: fit-content;
 }
-.btn-black {
-    background: black;
-    color: #ffa368;
-}
-
-.btn-black:hover,
-.btn-black:active,
-.btn-black:focus {
-    background: #222;
-    color: #86c4ff;
-}
-
-.text-black {
-    color: #000 !important;
-}
 
 /* inside needs in index */
 
 .inside-middle{
     padding-top: 90px;
 }
-/* Boxes for image */
+
+/* Image Box page */
 
 .box {
     width: 40%;
 }
-
 
 /* Country */
 
@@ -236,6 +244,13 @@ hr {
     height: 100px;
     overflow-x: hidden;
     overflow-y: auto;
+}
+
+/* Contact page */
+
+#user-contact-form .form-control {    
+    border-color: #000;
+    color: #000;
 }
 
 /* Footer */
@@ -367,7 +382,6 @@ hr {
 
 @media (min-width: 768px) {
     
-
     #intro {
         background: url(/media/images/main_img.jpg) no-repeat center center;
         height: auto;
